Added support for new 510 version; increased FTP buffer size to 16K; Disabled .bpl file selection; Added check/add for download directory existing

--- a/WindowsFormsApplication1/App.config
+++ b/WindowsFormsApplication1/App.config
@@ -49,6 +49,12 @@
             <setting name="FTP500URL" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Folder510" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="FTP510URL" serializeAs="String">
+                <value />
+            </setting>
         </EngenixUpdateInstallerFTP.Properties.Settings>
     </userSettings>
 </configuration>
