--- a/WindowsFormsApplication1/Properties/Settings.settings
+++ b/WindowsFormsApplication1/Properties/Settings.settings
@@ -41,5 +41,11 @@
     <Setting Name="FTP500URL" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Folder510" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="FTP510URL" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
