Updates for handling version 5.2.0

--- a/WindowsFormsApplication1/App.config
+++ b/WindowsFormsApplication1/App.config
@@ -55,6 +55,12 @@
             <setting name="FTP510URL" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Folder520" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="FTP520URL" serializeAs="String">
+                <value />
+            </setting>
         </EngenixUpdateInstallerFTP.Properties.Settings>
     </userSettings>
 </configuration>
