--- a/WindowsFormsApplication1/Properties/Settings.settings
+++ b/WindowsFormsApplication1/Properties/Settings.settings
@@ -47,5 +47,11 @@
     <Setting Name="FTP510URL" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Folder520" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="FTP520URL" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
